--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                         <i class="fa fa-hand-o-right" aria-hidden="true"></i>
                         ¿Buscas una piscina?
                     </h3>
-                    <p style="text-align: justify;">
+                    <p class="text-justify p-5">
                         Te ayudamos a que tu sueño se haga realidad. En albercas del mar te
                         asesoramos para que encuentres la alberca que siempre deseaste. Nuestros asesores especializados,
                         te ofrecerán los mejores y mas modernos equipos a nivel mundial, contamos con mas de 30 años de
@@ -309,21 +309,21 @@
             </div>
         </section>
         <section class="contenedor seccion" style="background-color: azure;">
-            <div class="grid">
+            <div class="grid p-5">
                 <div class="columnas-6">
                     <h3 class="subtitulos">
                         <i class="fa fa-hand-o-right" aria-hidden="true"></i>
                         Los mejores equipos para albercas en una piscina de ensueño
                     </h3>
-                    <p style="text-align: justify;">
+                    <p class="text-justify">
                         Imagina que llegas a casa después de un día largo y lleno de
                         actividades, ¿a poco no te gustaría tener tu propio oasis y darte un momento de relajación?
                     </p>
-                    <p style="text-align: justify;">
+                    <p class="text-justify">
                         Si tu respuesta fue “sí”, ¡hazlo posible con la familia de Albercas del
                         mar!
                     </p>
-                    <p style="text-align: justify;">
+                    <p class="text-justify">
                         Podemos ayudarte a construirlo con los mejores acabados, accesorios y
                         equipos para albercas.
                     </p>
@@ -366,7 +366,7 @@
         </section>
         <!-- Servicios -->
         <h1 class="titulo-descriptivo titulo-principal letter-spacing-5px text-uppercase text-center">
-            Construccion, mantenimiento y cambios de:
+            Construcción, mantenimiento y cambios de:
         </h1>
         <div class="container">
             <section class="row">
@@ -532,6 +532,7 @@
                 </div>
             </section>
         </div>
+        
         <section class="imagen-contacto">
             <div class="contenedor contenido-contacto">
                 <h2>Encuentra la alberca de tus sueños</h2>
@@ -833,12 +834,12 @@
                     <h4 class="text-center text-uppercase">Sobre <span>Albercas del Mar</span></h4>
                     <hr class="w-auto">
                     <h4 class="b-b-3px-c-secundario mb-0 text-uppercase">Dirección:</h4>
-                    <p style="text-align: justify;">
+                    <p class="text-justify p-5">
                         <br>
                         Nicolas Bravo 341, Centro, <br> Cd. Lázaro Cárdenas, Mich, MX.
                     </p>
                     <h4 class="b-b-3px-c-secundario mb-0 text-uppercase">Horarios de atención:</h4>
-                    <p style="text-align: justify;">
+                    <p class="text-justify p-5">
                         <div class="d-flex align-items-center p-0">
                             <i class="fa fa-check"></i>
                             <span class="d-block">Lu. a Vi. de 07:00 am a 08:00 pm</span>
