--- a/nosotros.html
+++ b/nosotros.html
@@ -116,7 +116,7 @@
             </div>
         </div>
     </main>
-    <h2 class="fw-300 text-center mb-0 titulo-descriptivo titulo-principal letter-spacing-5px my-4">Mas Sobre Nosotros</h2>
+    <h2 class="fw-300 text-center mb-0 titulo-descriptivo titulo-principal letter-spacing-5px my-4">Más Sobre Nosotros</h2>
     <section class="container">
         <article class="row">
             <div class="col-12 col-lg-6 text-justify mx-auto my-5 contenido-seccion-informacion box-shadow-secundario">
