Se agregó tabla correspondiente a los lugares que asisten con los servicios.

--- a/nosotros.html
+++ b/nosotros.html
@@ -126,6 +126,56 @@
                 la viabilidad de su proyecto.
             </div>
         </article>
+        <div class="table-responsive my-5">
+            <table class="table table-striped table-asistimos">
+                <thead>
+                    <tr class="text-center">
+                        <th colspan="3">
+                            <h3 class="fst-italic text-uppercase">
+                                Lugares que asistimos con nuestro servicio de albercas
+                            </h3>
+                        </tr>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Hoteles</td>
+                        <td>Enramadas</td>
+                        <td>Cabañas</td>
+                    </tr>
+                    <tr>
+                        <td>Centros recreativos</td>
+                        <td>Parques acuáticos</td>
+                        <td>Restaurantes</td>
+                    </tr>
+                    <tr>
+                        <td>Edificios</td>
+                        <td>Corporativos</td>
+                        <td>Gimnasios</td>
+                    </tr>
+                    <tr>
+                        <td>Unidades deportivas</td>
+                        <td>Plazas</td>
+                        <td>Centros comerciales</td>
+                    </tr>
+                    <tr>
+                        <td>Salones de fiestas</td>
+                        <td>Quintas</td>
+                        <td>Unidades residenciales</td>
+                    </tr>
+                    <tr>
+                        <td>Centro de rehabilitación física</td>
+                        <td>Residencias privadas</td>
+                        <td>Escuelas</td>
+                    </tr>
+                    <tr>
+                        <td>Hospitales</td>
+                        <td>Fabricas</td>
+                        <td>Negocios</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </section>
     <footer class="site-footer">
         <div class="container">
