--- a/nosotros.html
+++ b/nosotros.html
@@ -174,6 +174,13 @@
                         <td>Negocios</td>
                     </tr>
                 </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="3">
+                            <h4 class="text-uppercase">Entre otros</h4>
+                        </td>
+                    </tr>
+                </tfoot>
             </table>
         </div>
     </section>
