--- a/nosotros.html
+++ b/nosotros.html
@@ -127,7 +127,7 @@
             </div>
         </article>
         <div class="table-responsive my-5">
-            <table class="table table-striped table-asistimos">
+            <table class="table table-striped table-asistimos mb-5">
                 <thead>
                     <tr class="text-center">
                         <th colspan="3">
@@ -427,8 +427,8 @@
                     <h4 class="b-b-3px-c-secundario mb-0 text-uppercase">Teléfonos:</h4>
                     <ul class="p-2 links">
                         <li>
-                            <a href="tel:+52 (753) 537 1349">
-                                &nbsp;<i class="fa fa-phone"></i>&nbsp;&nbsp;+52 (753) 537 1349
+                            <a href="tel:+52 (753) 537 3761">
+                                &nbsp;<i class="fa fa-phone"></i>&nbsp;&nbsp;+52 (753) 537 3761
                             </a>
                         </li>
                         <li>
