--- a/index.html
+++ b/index.html
@@ -563,13 +563,13 @@
             <div class="ultimos-tweets">
                 <div 
                 class="fb-page" 
-                data-href="https://www.facebook.com/AlbercasDelMarLC/" data-tabs="timeline"
+                data-href="https://www.facebook.com/groups/3658878387568874/" data-tabs="timeline"
                 data-width="" data-height="" data-small-header="false" data-adapt-container-width="true"
                 data-hide-cover="false" data-show-facepile="true">
                     <blockquote 
-                    cite="https://www.facebook.com/AlbercasDelMarLC/" 
+                    cite="https://www.facebook.com/groups/3658878387568874/" 
                     class="fb-xfbml-parse-ignore"><a
-                    href="https://www.facebook.com/AlbercasDelMarLC/">Albercas Del Mar</a></blockquote>
+                    href="https://www.facebook.com/groups/3658878387568874/">Albercas Del Mar</a></blockquote>
                 </div>
             </div>
         </section>
@@ -876,7 +876,7 @@
                     </h4>
                     <div 
                     class="fb-page" 
-                    data-href="https://www.facebook.com/AlbercasDelMarLC"
+                    data-href="https://www.facebook.com/groups/3658878387568874"
                     data-tabs="timeline" 
                     data-width=""
                     data-height="" 
@@ -884,8 +884,8 @@
                     data-adapt-container-width="true" 
                     data-hide-cover="false" 
                     data-show-facepile="true">
-                        <blockquote cite="https://www.facebook.com/AlbercasDelMarLC/" class="fb-xfbml-parse-ignore">
-                            <a href="https://www.facebook.com/AlbercasDelMarLC/">Albercas del mar</a>
+                        <blockquote cite="https://www.facebook.com/groups/3658878387568874/" class="fb-xfbml-parse-ignore">
+                            <a href="https://www.facebook.com/groups/3658878387568874/">Albercas del mar</a>
                         </blockquote>
                     </div>
                     <h4 class="text-center text-uppercase">
