--- a/nosotros.html
+++ b/nosotros.html
@@ -117,15 +117,38 @@
         </div>
     </main>
     <h2 class="fw-300 text-center mb-0 titulo-descriptivo titulo-principal letter-spacing-5px my-4">Más Sobre Nosotros</h2>
-    <section class="container">
-        <article class="row">
-            <div class="col-12 col-lg-6 text-justify mx-auto my-5 contenido-seccion-informacion box-shadow-secundario">
+    <section class="container contenedor-linea-vertical mb-150">
+        <div class="contenedor-linea-complementos">
+            <div class="linea"></div>
+            <div class="circle"></div>
+        </div>
+        <article class="row section">
+            <div class="col-12 col-lg-6 text-justify mx-auto my-5 contenido-seccion-informacion box-shadow-secundario contenedor-informacion-impar">
                 <i class="fa fa-thumb-tack"></i>
                 Apoyamos desde el diseño de su proyecto, con la elaboración de planos arquitectónicos, estructurales, eléctricos e
                 hidrosanitarios, estudio del área para futura construcción e instalación de equipo, permisos para construir su alberca y
                 la viabilidad de su proyecto.
             </div>
         </article>
+        <article class="row section">
+            <div class="col-12 col-lg-6 text-justify mx-auto my-5 contenido-seccion-informacion box-shadow-secundario contenedor-informacion-par">
+                <i class="fa fa-thumb-tack"></i>
+                Realizamos trabajos dentro y fuera de la ciudad, con más de 30 años avalando nuestra experiencia las distintas empresas
+                asistidas con nuestros proyectos y servicios.
+            </div>
+        </article>
+        <article class="row section">
+            <div class="col-12 col-lg-6 mx-auto my-5 contenido-seccion-informacion box-shadow-secundario text-center contenedor-informacion-impar">
+                <i class="fa fa-thumb-tack"></i>
+                Para visitas, levantamiento de obra y/o cotizaciones de servicios, contactenos a:
+                <ul>
+                    <li><a href="tomail:info@albercasdelmar.com">info@albercasdelmar.com</a></li>
+                    <li><a href="tomail:construccionlc@yahoo.com">construccionlc@yahoo.com</a></li>
+                </ul>
+            </div>
+        </article>
+    </section>
+    <section class="container">
         <div class="table-responsive my-5">
             <table class="table table-striped table-asistimos mb-5">
                 <thead>
