--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
     </div>
     <header class="site-header inicio">
         <div class="row mx-0">
-            <div class="col-12 col-md-6 p-0">
+            <div class="col-12 col-md-2 p-0">
                 <div class="logo mx-auto">
                     <a href="index.html">
                         <img src="img/logo/logo_albercas_del_mar.png" alt="ALBERCAS DEL MAR LOGO">
                     </a>
                 </div>
-                <h4 class="ml-5px texto-logo text-uppercase w-auto fw-800 b-b-3px-c-secundario">
+                <h4 class="ml-5px texto-logo text-uppercase w-auto fw-800">
                     Diseño y construcción de albercas
                 </h4>
             </div>
-            <div class="col-12 col-md-6 p-0">
+            <div class="col-12 col-md-10 p-0">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light p-3 box-shadow-principal h-100">
                     <div class="container-fluid">
                         <button 
@@ -68,13 +68,41 @@
                         aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <div class="collapse navbar-collapse d-lg-flex justify-content-lg-end mx-auto" id="navbarNavAltMarkup">
+                        <div class="collapse navbar-collapse d-lg-flex justify-content-lg-end mx-auto ml-0im " id="navbarNavAltMarkup">
                             <div id="navegacion-principal" class="navbar-nav text-uppercase">
-                                <a class="nav-link p-3 active" aria-current="page" href="index.html">Inicio</a>
-                                <a class="nav-link p-3" href="nosotros.html">¿Quiénes somos?</a>
-                                <a class="nav-link p-3" href="servicios.html">Servicios</a>
-                                <a class="nav-link p-3 d-none" href="galeria.html">Galería</a>
-                                <a class="nav-link p-3" href="contacto.html">Contacto</a>
+                                <a 
+                                class="nav-link p-3 active" 
+                                aria-current="page" 
+                                href="index.html">Inicio</a>
+                                <a 
+                                class="nav-link p-3" 
+                                href="nosotros.html">¿Quiénes somos?</a>
+                                <a 
+                                class="nav-link p-3" 
+                                href="servicios.html">Servicios</a>
+                                <a 
+                                class="nav-link p-3 d-none" 
+                                href="galeria.html">Galería</a>
+                                <a 
+                                class="nav-link p-3" 
+                                href="contacto.html">Contacto</a>
+                                <!-- Páginas web relacionadas -->
+                                <a 
+                                class="nav-link p-3 redireccion-web" 
+                                href="https://construriomar.com/" 
+                                target="_blank">Constructora Riomar</a>
+                                <a 
+                                class="nav-link p-3 redireccion-web" 
+                                href="https://palapasriomar.com/" 
+                                target="_blank">Palapas Riomar</a>
+                                <a 
+                                class="nav-link p-3 redireccion-web" 
+                                href="https://riomarpaisajismo.com" 
+                                target="_blank">Riomar Paisajismo</a>
+                                <a 
+                                class="nav-link p-3 redireccion-web" 
+                                href="https://masterlimpio.com/" 
+                                target="_blank">Máster Limpio</a>
                             </div>
                         </div>
                     </div>
@@ -111,13 +139,13 @@
                         <div class="row text-center mb-5 servicios-titulo text-white servicio-construccion">
                             <p class="text-uppercase">
                                 <span class="bineta"></span>
-                                Diseño, Reparación, Mantenimiento y limpieza de albercas
+                                Diseño, Construcción, Reparación, Mantenimiento y limpieza de albercas
                             </p>
-                            <p class="text-uppercase">
+                            <p class="text-uppercase d-none">
                                 <span class="bineta"></span>
                                 Instalación de paneles, calentadores solares para agua tibia y cisternas
                             </p>
-                            <p class="text-uppercase">
+                            <p class="text-uppercase d-none">
                                 <span class="bineta"></span>
                                 Instalación de equipo, colocación de veneciano, cuarto de máquinas, bombas y pozos de agua
                             </p>
@@ -151,7 +179,7 @@
         </button>
     </div>
     <main>
-        <section class="nuestro-servicio container"> 
+        <section class="nuestro-servicio container d-none"> 
             <article class="p-5 p-lg-0 col-12 col-lg-6 m-auto mb-5">
                 <div class="contenedor-informacion text-center">
                     <img 
@@ -190,7 +218,7 @@
             <div class="row">
                 <div 
                 id="carousel-services" 
-                class="carousel slide carousel-fade mx-auto mb-5 box-shadow-secundario col-md-6 px-0" 
+                class="carousel slide carousel-fade mx-auto mb-5 box-shadow-secundario col-md-6 px-0 mt-5" 
                 data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -547,32 +575,6 @@
         <h1 class="fw-300 text-center titulo-descriptivo titulo-principal letter-spacing-5px text-uppercase text-center mb-0">
             <b>Contactanos</b>
         </h1>
-        <section class="container-fluid">
-            <div class="row">
-                <div class="col-12 p-0">
-                    <iframe 
-                    class="w-100"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3795.471885459347!2d-102.196537185107!3d17.956769690859733!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84315de95005187b%3A0xfc3a76c03dfdcb0e!2sNicolas%20Bravo%20341%20Centro!5e0!3m2!1ses!2smx!4v1652822012953!5m2!1ses!2smx" 
-                    height="450" 
-                    style="border:0;" 
-                    allowfullscreen="" 
-                    loading="lazy" 
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-            </div>
-            <div class="ultimos-tweets">
-                <div 
-                class="fb-page" 
-                data-href="https://www.facebook.com/AlbercasDelMarLC/" data-tabs="timeline"
-                data-width="" data-height="" data-small-header="false" data-adapt-container-width="true"
-                data-hide-cover="false" data-show-facepile="true">
-                    <blockquote 
-                    cite="https://www.facebook.com/AlbercasDelMarLC/" 
-                    class="fb-xfbml-parse-ignore"><a
-                    href="https://www.facebook.com/AlbercasDelMarLC/">Albercas Del Mar</a></blockquote>
-                </div>
-            </div>
-        </section>
         <section class="container">
             <div class="row">
                 <section class="contenedor seccion seccion-contacto">
@@ -637,10 +639,6 @@
                                     <i class="fa fa-thumb-tack"></i>
                                     Project manager
                                 </li>
-                                <li class="list-group-item">
-                                    <i class="fa fa-thumb-tack"></i>
-                                    Ingeniero residente
-                                </li>
                             </ul>
                         </div>
                         <div class="col-12 col-md-6 col-lg-3 p-0">
@@ -655,11 +653,7 @@
                                 </li>
                                 <li class="list-group-item">
                                     <i class="fa fa-thumb-tack"></i>
-                                    Ingeniero metalmecánico
-                                </li>
-                                <li class="list-group-item">
-                                    <i class="fa fa-thumb-tack"></i>
-                                    Ingeniero electromecánico
+                                    Ingeniero residente
                                 </li>
                             </ul>
                         </div>
@@ -667,19 +661,15 @@
                             <ul class="p-5px">
                                 <li class="list-group-item">
                                     <i class="fa fa-thumb-tack"></i>
-                                    Geólogos
-                                </li>
-                                <li class="list-group-item">
-                                    <i class="fa fa-thumb-tack"></i>
-                                    Mecánico automotriz
-                                </li>
-                                <li class="list-group-item">
-                                    <i class="fa fa-thumb-tack"></i>
-                                    Analista de costos
+                                    Ingeniero proyectos hidrosanitarios
                                 </li>
                                 <li class="list-group-item">
                                     <i class="fa fa-thumb-tack"></i>
                                     Abogado
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fa fa-thumb-tack"></i>
+                                    Ingeniero eléctrico
                                 </li>
                             </ul>
                         </div>
@@ -691,15 +681,7 @@
                                 </li>
                                 <li class="list-group-item">
                                     <i class="fa fa-thumb-tack"></i>
-                                    Analista de costos
-                                </li>
-                                <li class="list-group-item">
-                                    <i class="fa fa-thumb-tack"></i>
                                     Administrador
-                                </li>
-                                <li class="list-group-item">
-                                    <i class="fa fa-thumb-tack"></i>
-                                    Ingeniero eléctrico
                                 </li>
                             </ul>
                         </div>
