--- a/nosotros.html
+++ b/nosotros.html
@@ -45,17 +45,17 @@
     </div>
     <header class="site-header inicio">
         <div class="row mx-0">
-            <div class="col-12 col-md-6 p-0">
+            <div class="col-12 col-md-2 p-0">
                 <div class="logo mx-auto">
                     <a href="index.html">
                         <img src="img/logo/logo_albercas_del_mar.png" alt="ALBERCAS DEL MAR LOGO">
                     </a>
                 </div>
-                <h4 class="ml-5px texto-logo text-uppercase w-auto fw-800 b-b-3px-c-secundario">
+                <h4 class="ml-5px texto-logo text-uppercase w-auto fw-800">
                     Diseño y construcción de albercas
                 </h4>
             </div>
-            <div class="col-12 col-md-6 p-0">
+            <div class="col-12 col-md-10 p-0">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light p-3 box-shadow-principal h-100">
                     <div class="container-fluid">
                         <button 
@@ -70,11 +70,39 @@
                         </button>
                         <div class="collapse navbar-collapse d-lg-flex justify-content-lg-end mx-auto" id="navbarNavAltMarkup">
                             <div id="navegacion-principal" class="navbar-nav text-uppercase">
-                                <a class="nav-link p-3 active" aria-current="page" href="index.html">Inicio</a>
-                                <a class="nav-link p-3" href="nosotros.html">¿Quiénes somos?</a>
-                                <a class="nav-link p-3" href="servicios.html">Servicios</a>
-                                <a class="nav-link p-3 d-none" href="galeria.html">Galería</a>
-                                <a class="nav-link p-3" href="contacto.html">Contacto</a>
+                                <a 
+                                class="nav-link p-3 active" 
+                                aria-current="page" 
+                                href="index.html">Inicio</a>
+                                <a 
+                                class="nav-link p-3" 
+                                href="nosotros.html">¿Quiénes somos?</a>
+                                <a 
+                                class="nav-link p-3" 
+                                href="servicios.html">Servicios</a>
+                                <a 
+                                class="nav-link p-3 d-none" 
+                                href="galeria.html">Galería</a>
+                                <a 
+                                class="nav-link p-3" 
+                                href="contacto.html">Contacto</a>
+                                <!-- Páginas web relacionadas -->
+                                <a 
+                                class="nav-link p-3 redireccion-web" 
+                                href="https://construriomar.com/" 
+                                target="_blank">Constructora Riomar</a>
+                                <a 
+                                class="nav-link p-3 redireccion-web" 
+                                href="https://palapasriomar.com/" 
+                                target="_blank">Palapas Riomar</a>
+                                <a 
+                                class="nav-link p-3 redireccion-web" 
+                                href="https://riomarpaisajismo.com" 
+                                target="_blank">Riomar Paisajismo</a>
+                                <a 
+                                class="nav-link p-3 redireccion-web" 
+                                href="https://masterlimpio.com/" 
+                                target="_blank">Máster Limpio</a>
                             </div>
                         </div>
                     </div>
@@ -235,10 +263,6 @@
                                     <i class="fa fa-thumb-tack"></i>
                                     Project manager
                                 </li>
-                                <li class="list-group-item">
-                                    <i class="fa fa-thumb-tack"></i>
-                                    Ingeniero residente
-                                </li>
                             </ul>
                         </div>
                         <div class="col-12 col-md-6 col-lg-3 p-0">
@@ -253,11 +277,7 @@
                                 </li>
                                 <li class="list-group-item">
                                     <i class="fa fa-thumb-tack"></i>
-                                    Ingeniero metalmecánico
-                                </li>
-                                <li class="list-group-item">
-                                    <i class="fa fa-thumb-tack"></i>
-                                    Ingeniero electromecánico
+                                    Ingeniero residente
                                 </li>
                             </ul>
                         </div>
@@ -265,19 +285,15 @@
                             <ul class="p-5px">
                                 <li class="list-group-item">
                                     <i class="fa fa-thumb-tack"></i>
-                                    Geólogos
-                                </li>
-                                <li class="list-group-item">
-                                    <i class="fa fa-thumb-tack"></i>
-                                    Mecánico automotriz
-                                </li>
-                                <li class="list-group-item">
-                                    <i class="fa fa-thumb-tack"></i>
-                                    Analista de costos
+                                    Ingeniero proyectos hidrosanitarios
                                 </li>
                                 <li class="list-group-item">
                                     <i class="fa fa-thumb-tack"></i>
                                     Abogado
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fa fa-thumb-tack"></i>
+                                    Ingeniero eléctrico
                                 </li>
                             </ul>
                         </div>
@@ -289,15 +305,7 @@
                                 </li>
                                 <li class="list-group-item">
                                     <i class="fa fa-thumb-tack"></i>
-                                    Analista de costos
-                                </li>
-                                <li class="list-group-item">
-                                    <i class="fa fa-thumb-tack"></i>
                                     Administrador
-                                </li>
-                                <li class="list-group-item">
-                                    <i class="fa fa-thumb-tack"></i>
-                                    Ingeniero eléctrico
                                 </li>
                             </ul>
                         </div>
