--- a/index.html
+++ b/index.html
@@ -123,13 +123,27 @@
             data-bs-slide-to="0" 
             aria-current="true" 
             aria-label="Imagen 1"></button>
+            <button 
+            class="active btnSliderCambioImagen"
+            type="button" 
+            data-bs-target="#carouselServicios" 
+            data-bs-slide-to="1" 
+            aria-current="true" 
+            aria-label="Imagen 2"></button>
+            <button 
+            class="active btnSliderCambioImagen"
+            type="button" 
+            data-bs-target="#carouselServicios" 
+            data-bs-slide-to="2" 
+            aria-current="true" 
+            aria-label="Imagen 3"></button>
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/alberca_dos.jpg" 
+                <img src="img/albercas_del_mar_3.jpeg" 
                 class="d-block w-100">
                 <div class="carousel-caption d-flex">
-                    <div class="p-r">
+                    <div class="p-r fondo-text-slider">
                         <div class="font-size-120px line-height-normal-60p titulo-header">
                             <p class="text-white titulo-principal">ALBERCAS</p>
                             <p class="text-white mb-5 titulo-principal">DEL MAR</p>
@@ -137,7 +151,7 @@
                     </div>
                     <div class="container mt-5">
                         <div class="row text-center mb-5 servicios-titulo text-white servicio-construccion">
-                            <p class="text-uppercase">
+                            <p class="text-uppercase fondo-text-slider">
                                 <span class="bineta"></span>
                                 Diseño, Construcción, Reparación, Mantenimiento y limpieza de albercas
                             </p>
@@ -148,6 +162,60 @@
                             <p class="text-uppercase d-none">
                                 <span class="bineta"></span>
                                 Instalación de equipo, colocación de veneciano, cuarto de máquinas, bombas y pozos de agua
+                            </p>
+                        </div>
+                    </div>
+                    <div class="subInformacion p-5">
+                        <a 
+                        href="contacto.html" 
+                        class="btn btn-success fondo-color-secundario btn-contacto">
+                            Contactános
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="img/albercas_del_mar_imagen1.jpg" 
+                class="d-block w-100">
+                <div class="carousel-caption d-flex">
+                    <div class="p-r fondo-text-slider">
+                        <div class="font-size-120px line-height-normal-60p titulo-header">
+                            <p class="text-white titulo-principal">ALBERCAS</p>
+                            <p class="text-white mb-5 titulo-principal">DEL MAR</p>
+                        </div>
+                    </div>
+                    <div class="container mt-5">
+                        <div class="row text-center mb-5 servicios-titulo text-white servicio-construccion">
+                            <p class="text-uppercase fondo-text-slider">
+                                <span class="bineta"></span>
+                                Construimos la alberca de tus sueños
+                            </p>
+                        </div>
+                    </div>
+                    <div class="subInformacion p-5">
+                        <a 
+                        href="contacto.html" 
+                        class="btn btn-success fondo-color-secundario btn-contacto">
+                            Contactános
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="img/albercas_del_mar_2.jpeg" 
+                class="d-block w-100">
+                <div class="carousel-caption d-flex">
+                    <div class="p-r fondo-text-slider">
+                        <div class="font-size-120px line-height-normal-60p titulo-header">
+                            <p class="text-white titulo-principal">ALBERCAS</p>
+                            <p class="text-white mb-5 titulo-principal">DEL MAR</p>
+                        </div>
+                    </div>
+                    <div class="container mt-5">
+                        <div class="row text-center mb-5 servicios-titulo text-white servicio-construccion">
+                            <p class="text-uppercase fondo-text-slider">
+                                <span class="bineta"></span>
+                                Le damos un plus a tu inversión y vive con comodidad
                             </p>
                         </div>
                     </div>
