--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
                                 class="nav-link p-3 redireccion-web" 
                                 href="https://masterlimpio.com/" 
                                 target="_blank">Máster Limpio</a>
+                                <a 
+                                class="nav-link p-3 redireccion-web" 
+                                href="https://pozosriomar.com" 
+                                target="_blank">Pozos Rio Mar</a>
                             </div>
                         </div>
                     </div>
@@ -1020,13 +1024,6 @@
                             <a target="_blank" href="https://icamar.com/">
                                 <i class="fa fa-globe"></i>
                                 www.icamar.com
-                            </a>
-                        </li>
-                        <li>
-                            Pozos Rio Mar:<br>
-                            <a target="_blank" href="https://pozosriomar.com/">
-                                <i class="fa fa-globe"></i>
-                                www.pozosriomar.com
                             </a>
                         </li>
                         <li>
